# douyin-singer-board

./: .gitignore  .gitmodules  .prettierignore  CLAUDE.md  README.md  index.html  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml  test.yml
plans/: 1-polymorphic-rivest.md
public/: secret.m4a
scripts/: build-kugou-api-bin.mjs  bump-patch.mjs  compare-search.js  patch-pe-subsystem.mjs
sidecar/: package.json  tsconfig.json
sidecar/scripts/: build-bin.mjs
sidecar/src/: index.ts  matcher.test.ts  matcher.ts  types.ts
src/: AboutModal.tsx  App.tsx  KugouDebugModal.tsx  KugouLoginModal.tsx  db.ts  kugou.ts  kugouSession.ts  main.tsx  store.test.ts  store.ts  styles.css  theme.ts  types.ts  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: kugou.rs  kugou_api.rs  lib.rs  main.rs  sidecar.rs
src/components/: AppHeader.tsx  AppLogo.tsx  BlacklistPanel.tsx  CollapsiblePanel.tsx  ConfigSection.tsx  ConnectionStatus.tsx  ContextMenu.tsx  HeaderButton.tsx  KugouPlaylistSection.tsx  LeftPanel.tsx  LogPanel.tsx  MainContent.tsx  SongList.tsx  SongTable.tsx  StatusLine.tsx  TabBar.tsx  ThemeSwitcher.tsx  Toast.tsx  ToolbarSection.tsx
src/components/ui/: dialog.tsx  (+4 more)
src/hooks/: useAutoSync.ts  useBlacklist.ts  useContextMenu.ts  useKugouAuth.ts  useKugouSearch.ts  useSidecarEvents.ts  useToast.ts  useWindowWidth.ts
src/store/: config.ts  connection.ts  index.ts  kugou.ts  logs.ts  songs.ts
