[package]
name = "sususongboard"
version = "0.0.36-6"
description = "SUSUSongBoard - 抖音直播点歌助手"
edition = "2021"

[lib]
name = "sususongboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
